# opencv_playground

./: CMakeLists.txt  LICENSE  README.md  main.py
aio/: main.cpp  main.h
aoi/: main.py
basics/: main.py
simple/: main.cpp  main.h
video/: main.cpp  main.h
